feature: animation para headers

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
 <body>
   <section class="header">
+    <img src="images/logo-white.png">
     <div>
       <h1>outdoors</h1>
       <h3>is where life happens</h3>
     </div>
     <button><span>discover our tours</span></button>
   </section>
+
   <script type="module" src="./js/script.js"></script>
 </body>
-
 </html>
