feat: bem notation done

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 
 <body>
   <section class="header">
-    <img src="images/logo-white.png">
-    <div>
-      <h1>outdoors</h1>
-      <h3>is where life happens</h3>
+    <img class="header__logo" src="images/logo-white.png">
+    <div class="header__title">
+      <div class="heading">
+        <h1 class="heading--main">outdoors</h1>
+        <h3 class="heading--sub">is where life happens</h3>
+      </div>
     </div>
-    <button><span>discover our tours</span></button>
+    <button class="btn btn--white btn--animated">
+      <a href="#">discover our tours</a>
+    </button>
   </section>
 
   <script type="module" src="./js/script.js"></script>
