--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link rel="icon" href="images/favicon.png" type="image/gif"> 
+  <link rel="icon" href="images/favicon.png" type="image/gif">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>The Natours Project</title>
@@ -21,6 +21,70 @@
     </button>
   </section>
 
+  <section class="grid-test">
+    <div class="row">
+      <div class="col-1-of-2">
+        Col 1 of 2
+      </div>
+      <div class="col-1-of-2">
+        Col 1 of 2
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1-of-3">
+        Col 1 of 3
+      </div>
+      <div class="col-1-of-3">
+        Col 1 of 3
+      </div>
+      <div class="col-1-of-3">
+        Col 1 of 3
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1-of-3">
+        Col 1 of 3
+      </div>
+      <div class="col-2-of-3">
+        Col 2 of 3
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1-of-4">
+        Col 1 of 4
+      </div>
+      <div class="col-1-of-4">
+        Col 1 of 4
+      </div>
+      <div class="col-1-of-4">
+        Col 1 of 4
+      </div>
+      <div class="col-1-of-4">
+        Col 1 of 4
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1-of-4">
+        Col 1 of 4
+      </div>
+      <div class="col-1-of-4">
+        Col 1 of 4
+      </div>
+      <div class="col-2-of-4">
+        Col 2 of 4
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1-of-4">
+        Col 1 of 4
+      </div>
+      <div class="col-3-of-4">
+        Col 3 of 4
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./js/script.js"></script>
 </body>
+
 </html>
