--- a/index.html
+++ b/index.html
@@ -21,65 +21,28 @@
     </button>
   </section>
 
-  <section class="grid-test">
+  <section class="about">
+    <div class="about__title">
+      <div class="titleSection">
+        <h1 class="titleSection--natourTheme">
+          Exciting tours for adventurous people
+        </h1>
+      </div>
+    </div>
     <div class="row">
-      <div class="col-1-of-2">
+      <div class="about__contentLeft col-1-of-2">
+        <h3 class="titleContent">You're going to fall in love with nature</h3>
+        <p class="textContent">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+          ducimus quam nisi exercitationem omnis earum qui.
+        </p>
+        <h3 class="titleContent">Live adventures like you never have before</h3>
+        <p class="textContent">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.
+        </p>
+      </div>
+      <div class="about__contentRight col-1-of-2">
         Col 1 of 2
-      </div>
-      <div class="col-1-of-2">
-        Col 1 of 2
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-3">
-        Col 1 of 3
-      </div>
-      <div class="col-1-of-3">
-        Col 1 of 3
-      </div>
-      <div class="col-1-of-3">
-        Col 1 of 3
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-3">
-        Col 1 of 3
-      </div>
-      <div class="col-2-of-3">
-        Col 2 of 3
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-2-of-4">
-        Col 2 of 4
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-3-of-4">
-        Col 3 of 4
       </div>
     </div>
   </section>
