--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </button>
   </section>
 
-  <section class="about">
-    <div class="about__title">
+  <section class="aboutSection">
+    <div class="aboutSection__title">
       <div class="titleSection">
-        <h1 class="titleSection--natourTheme">
+        <h2 class="titleSection--natourTheme">
           Exciting tours for adventurous people
-        </h1>
+        </h2>
       </div>
     </div>
     <div class="row">
-      <div class="about__contentLeft col-1-of-2">
+      <div class="aboutSection__contentLeft col-1-of-2">
         <h3 class="titleContent">You're going to fall in love with nature</h3>
         <p class="textContent">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
@@ -41,8 +41,10 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.
         </p>
       </div>
-      <div class="about__contentRight col-1-of-2">
-        Col 1 of 2
+      <div class="aboutSection__contentRight col-1-of-2">
+        <img src="./images/nat-1.jpg">
+        <img src="./images/nat-2.jpg">
+        <img src="./images/nat-3.jpg">
       </div>
     </div>
   </section>
