feat: linkButton component and utility class were build

--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@
     </div>
     <div class="row">
       <div class="aboutSection__contentLeft col-1-of-2">
-        <h3 class="titleContent">You're going to fall in love with nature</h3>
+        <h3 class="titleContent u-margin-bottom-1and5">You're going to fall in love with nature</h3>
         <p class="textContent">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
           ducimus quam nisi exercitationem omnis earum qui.
         </p>
-        <h3 class="titleContent">Live adventures like you never have before</h3>
+        <h3 class="titleContent u-margin-bottom-1and5">Live adventures like you never have before</h3>
         <p class="textContent">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.
         </p>
+        <div class="aboutSection__buttonContainer">
+          <button class="linkButton linkButton--green">
+            <a href="#">Learn more →</a>
+          </button>
+        </div>
       </div>
       <div class="aboutSection__contentRight col-1-of-2">
         <img src="./images/nat-1.jpg">
