--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="aboutSection__contentLeft col-1-of-2">
+      <div class="col-1-of-2">
         <h3 class="titleContent u-margin-bottom-small">You're going to fall in love with nature</h3>
         <p class="textContent">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat
+          quis consequatur
           ducimus quam nisi exercitationem omnis earum qui.
         </p>
         <h3 class="titleContent u-margin-bottom-small">Live adventures like you never have before</h3>
@@ -46,10 +47,12 @@
           </a>
         </div>
       </div>
-      <div class="aboutSection__contentRight col-1-of-2">
-        <img src="./images/nat-1.jpg">
-        <img src="./images/nat-2.jpg">
-        <img src="./images/nat-3.jpg">
+      <div class="col-1-of-2">
+        <div class="galery">
+          <img src="./images/nat-1.jpg" class="galery__photo galery__photo--p1">
+          <img src="./images/nat-2.jpg" class="galery__photo galery__photo--p2">
+          <img src="./images/nat-3.jpg" class="galery__photo galery__photo--p3">
+        </div>
       </div>
     </div>
   </section>
