feat: icons folder and featureCard were added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="icon" href="images/favicon.png" type="image/gif">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="./css/icons/styles.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>The Natours Project</title>
 </head>
@@ -52,6 +53,59 @@
           <img src="./images/nat-1.jpg" class="galery__photo galery__photo--p1">
           <img src="./images/nat-2.jpg" class="galery__photo galery__photo--p2">
           <img src="./images/nat-3.jpg" class="galery__photo galery__photo--p3">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="features">
+    <div class="row">
+      <div class="col-1-of-4">
+        <div class="featureCard">
+          <i class="icon-basic-world featureCard__header"></i>
+          <div class="featureCard__title">
+            explore the world
+          </div>
+          <div class="featureCard__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Aperiam, ipsum sapiente aspernatur.
+          </div>
+        </div>
+      </div>
+      <div class="col-1-of-4">
+        <div class="featureCard">
+          <i class="icon-basic-clock featureCard__header"></i>
+          <div class="featureCard__title">
+            meet the nature
+          </div>
+          <div class="featureCard__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Aperiam, ipsum sapiente aspernatur.
+          </div>
+        </div>
+      </div>
+      <div class="col-1-of-4">
+        <div class="featureCard">
+          <i class="icon-basic-map featureCard__header"></i>
+          <div class="featureCard__title">
+            find your way
+          </div>
+          <div class="featureCard__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Aperiam, ipsum sapiente aspernatur.
+          </div>
+        </div>
+      </div>
+      <div class="col-1-of-4">
+        <div class="featureCard">
+          <i class="icon-basic-heart featureCard__header"></i>
+          <div class="featureCard__title">
+            live a healthier life
+          </div>
+          <div class="featureCard__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Aperiam, ipsum sapiente aspernatur.
+          </div>
         </div>
       </div>
     </div>
