chore: feature layout in progres

--- a/index.html
+++ b/index.html
@@ -63,48 +63,52 @@
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-world featureCard__header"></i>
-          <div class="featureCard__title">
+          <h3 class="featureCard__title">
             explore the world
-          </div>
+          </h3>
           <div class="featureCard__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aperiam, ipsum sapiente aspernatur.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aperiam, ipsum sapiente aspernatur.
+            </p>
           </div>
         </div>
       </div>
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-clock featureCard__header"></i>
-          <div class="featureCard__title">
+          <h3 class="featureCard__title">
             meet the nature
-          </div>
+          </h3>
           <div class="featureCard__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aperiam, ipsum sapiente aspernatur.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aperiam, ipsum sapiente aspernatur.
+            </p>
           </div>
         </div>
       </div>
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-map featureCard__header"></i>
-          <div class="featureCard__title">
+          <h3 class="featureCard__title">
             find your way
-          </div>
+          </h3>
           <div class="featureCard__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aperiam, ipsum sapiente aspernatur.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aperiam, ipsum sapiente aspernatur.
+            </p>
           </div>
         </div>
       </div>
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-heart featureCard__header"></i>
-          <div class="featureCard__title">
+          <h3 class="featureCard__title">
             live a healthier life
-          </div>
+          </h3>
           <div class="featureCard__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aperiam, ipsum sapiente aspernatur.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aperiam, ipsum sapiente aspernatur.
+            </p>
           </div>
         </div>
       </div>
