refact: featureCard was refactored

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-world featureCard__header"></i>
-          <h3 class="featureCard__title">
+          <h3 class="titleContent u-margin-bottom-small">
             explore the world
           </h3>
           <div class="featureCard__content">
@@ -76,7 +76,7 @@
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-clock featureCard__header"></i>
-          <h3 class="featureCard__title">
+          <h3 class="titleContent u-margin-bottom-small">
             meet the nature
           </h3>
           <div class="featureCard__content">
@@ -89,7 +89,7 @@
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-map featureCard__header"></i>
-          <h3 class="featureCard__title">
+          <h3 class="titleContent u-margin-bottom-small">
             find your way
           </h3>
           <div class="featureCard__content">
@@ -102,7 +102,7 @@
       <div class="col-1-of-4">
         <div class="featureCard">
           <i class="icon-basic-heart featureCard__header"></i>
-          <h3 class="featureCard__title">
+          <h3 class="titleContent u-margin-bottom-small">
             live a healthier life
           </h3>
           <div class="featureCard__content">
