--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
     </div>
   </section>
 
+  <section class="toursSection">
+    <div class="row">
+      <div class="col-1-of-3">
+        <div class="tourCard">
+          <div class="tourCard__header">
+            <img class="tourCard__header--summer" src="./images/nat-1.jpg">
+            <h2 class="tourCard__header__title">the sea explorer</h2>
+          </div>
+          <ul class="tourCard__detail">
+            <li class="tourCard__detail__item">3 day tours</li>
+            <li class="tourCard__detail__item">Up to 30 people</li>
+            <li class="tourCard__detail__item">2 tours guides</li>
+            <li class="tourCard__detail__item">Sleep in cozy hotels</li>
+            <li class="tourCard__detail__item">Difficulty: easy</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-1-of-3">
+        B
+      </div>
+      <div class="col-1-of-3">
+        C
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./js/script.js"></script>
 </body>
 
