chore: featureSection in progress

--- a/index.html
+++ b/index.html
@@ -116,11 +116,18 @@
   </section>
 
   <section class="toursSection">
+    <div class="toursSection__title">
+      <div class="titleSection">
+        <h2 class="titleSection--natourTheme">
+          most popular tours
+        </h2>
+      </div>
+    </div>
     <div class="row">
       <div class="col-1-of-3">
+        
         <div class="tourCard">
-          <div class="tourCard__header">
-            <img class="tourCard__header--summer" src="./images/nat-1.jpg">
+          <div class="tourCard__header tourCard__header--summer">
             <h2 class="tourCard__header__title">the sea explorer</h2>
           </div>
           <ul class="tourCard__detail">
