--- a/index.html
+++ b/index.html
@@ -125,18 +125,25 @@
     </div>
     <div class="row">
       <div class="col-1-of-3">
-        
         <div class="tourCard">
-          <div class="tourCard__header tourCard__header--summer">
-            <h2 class="tourCard__header__title">the sea explorer</h2>
+          <div class="tourCard__inner">
+            <div class="tourCard__inner--front">
+              xxx
+              <!-- <div class="tourCard__header tourCard__header--summer">
+                <h2 class="tourCard__header__title">the sea explorer</h2>
+              </div>
+              <ul class="tourCard__detail">
+                <li class="tourCard__detail__item">3 day tours</li>
+                <li class="tourCard__detail__item">Up to 30 people</li>
+                <li class="tourCard__detail__item">2 tours guides</li>
+                <li class="tourCard__detail__item">Sleep in cozy hotels</li>
+                <li class="tourCard__detail__item">Difficulty: easy</li>
+              </ul> -->
+            </div>
+            <div class="tourCard__inner--back">
+              yyy
+            </div>
           </div>
-          <ul class="tourCard__detail">
-            <li class="tourCard__detail__item">3 day tours</li>
-            <li class="tourCard__detail__item">Up to 30 people</li>
-            <li class="tourCard__detail__item">2 tours guides</li>
-            <li class="tourCard__detail__item">Sleep in cozy hotels</li>
-            <li class="tourCard__detail__item">Difficulty: easy</li>
-          </ul>
         </div>
       </div>
       <div class="col-1-of-3">
