feat: flipCard component and new structure in tourCard were added

--- a/index.html
+++ b/index.html
@@ -1,161 +1,192 @@
 <html>
+  <head>
+    <link rel="icon" href="images/favicon.png" type="image/gif" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/icons/styles.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>The Natours Project</title>
+  </head>
 
-<head>
-  <link rel="icon" href="images/favicon.png" type="image/gif">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-  <link rel="stylesheet" href="./css/icons/styles.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>The Natours Project</title>
-</head>
-
-<body>
-  <section class="header">
-    <img class="header__logo" src="images/logo-white.png">
-    <div class="header__title">
-      <div class="heading">
-        <h1 class="heading--main">outdoors</h1>
-        <h3 class="heading--sub">is where life happens</h3>
-      </div>
-    </div>
-    <button class="btn btn--white btn--animated">
-      <a href="#">discover our tours</a>
-    </button>
-  </section>
-
-  <section class="aboutSection">
-    <div class="aboutSection__title">
-      <div class="titleSection">
-        <h2 class="titleSection--natourTheme">
-          Exciting tours for adventurous people
-        </h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-2">
-        <h3 class="titleContent u-margin-bottom-small">You're going to fall in love with nature</h3>
-        <p class="textContent">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat
-          quis consequatur
-          ducimus quam nisi exercitationem omnis earum qui.
-        </p>
-        <h3 class="titleContent u-margin-bottom-small">Live adventures like you never have before</h3>
-        <p class="textContent">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.
-        </p>
-        <div class="aboutSection__buttonContainer">
-          <a class="linkButton linkButton--green" href="#">
-            Learn more →
-          </a>
+  <body>
+    <section class="header">
+      <img class="header__logo" src="images/logo-white.png" />
+      <div class="header__title">
+        <div class="heading">
+          <h1 class="heading--main">outdoors</h1>
+          <h3 class="heading--sub">is where life happens</h3>
         </div>
       </div>
-      <div class="col-1-of-2">
-        <div class="galery">
-          <img src="./images/nat-1.jpg" class="galery__photo galery__photo--p1">
-          <img src="./images/nat-2.jpg" class="galery__photo galery__photo--p2">
-          <img src="./images/nat-3.jpg" class="galery__photo galery__photo--p3">
+      <button class="btn btn--white btn--animated">
+        <a href="#">discover our tours</a>
+      </button>
+    </section>
+
+    <section class="aboutSection">
+      <div class="aboutSection__title">
+        <div class="titleSection">
+          <h2 class="titleSection--natourTheme">
+            Exciting tours for adventurous people
+          </h2>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section class="features">
-    <div class="row">
-      <div class="col-1-of-4">
-        <div class="featureCard">
-          <i class="icon-basic-world featureCard__header"></i>
+      <div class="row">
+        <div class="col-1-of-2">
           <h3 class="titleContent u-margin-bottom-small">
-            explore the world
+            You're going to fall in love with nature
           </h3>
-          <div class="featureCard__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aperiam, ipsum sapiente aspernatur.
-            </p>
+          <p class="textContent">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+            ipsum sapiente aspernatur libero repellat quis consequatur ducimus
+            quam nisi exercitationem omnis earum qui.
+          </p>
+          <h3 class="titleContent u-margin-bottom-small">
+            Live adventures like you never have before
+          </h3>
+          <p class="textContent">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            nulla deserunt voluptatum nam.
+          </p>
+          <div class="aboutSection__buttonContainer">
+            <a class="linkButton linkButton--green" href="#">
+              Learn more →
+            </a>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <div class="galery">
+            <img
+              src="./images/nat-1.jpg"
+              class="galery__photo galery__photo--p1"
+            />
+            <img
+              src="./images/nat-2.jpg"
+              class="galery__photo galery__photo--p2"
+            />
+            <img
+              src="./images/nat-3.jpg"
+              class="galery__photo galery__photo--p3"
+            />
           </div>
         </div>
       </div>
-      <div class="col-1-of-4">
-        <div class="featureCard">
-          <i class="icon-basic-clock featureCard__header"></i>
-          <h3 class="titleContent u-margin-bottom-small">
-            meet the nature
-          </h3>
-          <div class="featureCard__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aperiam, ipsum sapiente aspernatur.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-1-of-4">
-        <div class="featureCard">
-          <i class="icon-basic-map featureCard__header"></i>
-          <h3 class="titleContent u-margin-bottom-small">
-            find your way
-          </h3>
-          <div class="featureCard__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aperiam, ipsum sapiente aspernatur.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-1-of-4">
-        <div class="featureCard">
-          <i class="icon-basic-heart featureCard__header"></i>
-          <h3 class="titleContent u-margin-bottom-small">
-            live a healthier life
-          </h3>
-          <div class="featureCard__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aperiam, ipsum sapiente aspernatur.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="toursSection">
-    <div class="toursSection__title">
-      <div class="titleSection">
-        <h2 class="titleSection--natourTheme">
-          most popular tours
-        </h2>
+    <section class="features">
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="featureCard">
+            <i class="icon-basic-world featureCard__header"></i>
+            <h3 class="titleContent u-margin-bottom-small">
+              explore the world
+            </h3>
+            <div class="featureCard__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="featureCard">
+            <i class="icon-basic-clock featureCard__header"></i>
+            <h3 class="titleContent u-margin-bottom-small">
+              meet the nature
+            </h3>
+            <div class="featureCard__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="featureCard">
+            <i class="icon-basic-map featureCard__header"></i>
+            <h3 class="titleContent u-margin-bottom-small">
+              find your way
+            </h3>
+            <div class="featureCard__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="featureCard">
+            <i class="icon-basic-heart featureCard__header"></i>
+            <h3 class="titleContent u-margin-bottom-small">
+              live a healthier life
+            </h3>
+            <div class="featureCard__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-3">
-        <div class="tourCard">
-          <div class="tourCard__inner">
-            <div class="tourCard__inner--front">
-              xxx
-              <!-- <div class="tourCard__header tourCard__header--summer">
-                <h2 class="tourCard__header__title">the sea explorer</h2>
+    </section>
+
+    <section class="toursSection">
+      <div class="toursSection__title">
+        <div class="titleSection">
+          <h2 class="titleSection--natourTheme">
+            most popular tours
+          </h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="flipCard" style="height: 33.5rem;">
+            <div class="flipCard__inner">
+              <div class="flipCard__inner--front">
+                <div class="tourCardFront">
+                  <div
+                    class="tourCardFront__header tourCardFront__header--summer"
+                  >
+                    <h2 class="tourCardFront__header__title">
+                      the sea explorer
+                    </h2>
+                  </div>
+                  <ul class="tourCardFront__detail">
+                    <li class="tourCardFront__detail__item">3 day tours</li>
+                    <li class="tourCardFront__detail__item">Up to 30 people</li>
+                    <li class="tourCardFront__detail__item">2 tours guides</li>
+                    <li class="tourCardFront__detail__item">
+                      Sleep in cozy hotels
+                    </li>
+                    <li class="tourCardFront__detail__item">
+                      Difficulty: easy
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <ul class="tourCard__detail">
-                <li class="tourCard__detail__item">3 day tours</li>
-                <li class="tourCard__detail__item">Up to 30 people</li>
-                <li class="tourCard__detail__item">2 tours guides</li>
-                <li class="tourCard__detail__item">Sleep in cozy hotels</li>
-                <li class="tourCard__detail__item">Difficulty: easy</li>
-              </ul> -->
-            </div>
-            <div class="tourCard__inner--back">
-              yyy
+              <div class="flipCard__inner--back">
+                <div class="tourCardBack tourCardBack--summer">
+                  <h4 class="tourCardBack__subtitle">only</h4>
+                  <h1 class="tourCardBack__maintitle">$297</h1>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+        <div class="col-1-of-3">
+          B
+        </div>
+        <div class="col-1-of-3">
+          C
+        </div>
       </div>
-      <div class="col-1-of-3">
-        B
-      </div>
-      <div class="col-1-of-3">
-        C
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <script type="module" src="./js/script.js"></script>
-</body>
-
+    <script type="module" src="./js/script.js"></script>
+  </body>
 </html>
