feat: front tourCard side done

--- a/index.html
+++ b/index.html
@@ -145,17 +145,20 @@
       </div>
       <div class="row">
         <div class="col-1-of-3">
-          <div class="flipCard" style="height: 33.5rem;">
+          <div class="flipCard" style="height: 33.2rem;">
             <div class="flipCard__inner">
               <div class="flipCard__inner--front">
                 <div class="tourCardFront">
                   <div
                     class="tourCardFront__header tourCardFront__header--summer"
-                  >
-                    <h2 class="tourCardFront__header__title">
+                  ></div>
+                  <h2 class="tourCardFront__title">
+                    <span
+                      class="tourCardFront__titleSpanWrapper tourCardFront__titleSpanWrapper--summer"
+                    >
                       the sea explorer
-                    </h2>
-                  </div>
+                    </span>
+                  </h2>
                   <ul class="tourCardFront__detail">
                     <li class="tourCardFront__detail__item">3 day tours</li>
                     <li class="tourCardFront__detail__item">Up to 30 people</li>
@@ -179,10 +182,78 @@
           </div>
         </div>
         <div class="col-1-of-3">
-          B
+          <div class="flipCard" style="height: 33.2rem;">
+            <div class="flipCard__inner">
+              <div class="flipCard__inner--front">
+                <div class="tourCardFront">
+                  <div
+                    class="tourCardFront__header tourCardFront__header--sea"
+                  ></div>
+                  <h2 class="tourCardFront__title">
+                    <span
+                      class="tourCardFront__titleSpanWrapper tourCardFront__titleSpanWrapper--sea"
+                    >
+                      the forest hicker
+                    </span>
+                  </h2>
+                  <ul class="tourCardFront__detail">
+                    <li class="tourCardFront__detail__item">3 day tours</li>
+                    <li class="tourCardFront__detail__item">Up to 30 people</li>
+                    <li class="tourCardFront__detail__item">2 tours guides</li>
+                    <li class="tourCardFront__detail__item">
+                      Sleep in cozy hotels
+                    </li>
+                    <li class="tourCardFront__detail__item">
+                      Difficulty: easy
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="flipCard__inner--back">
+                <div class="tourCardBack tourCardBack--sea">
+                  <h4 class="tourCardBack__subtitle">only</h4>
+                  <h1 class="tourCardBack__maintitle">$297</h1>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-1-of-3">
-          C
+          <div class="flipCard" style="height: 33.2rem;">
+            <div class="flipCard__inner">
+              <div class="flipCard__inner--front">
+                <div class="tourCardFront">
+                  <div
+                    class="tourCardFront__header tourCardFront__header--forest"
+                  ></div>
+                  <h2 class="tourCardFront__title">
+                    <span
+                      class="tourCardFront__titleSpanWrapper tourCardFront__titleSpanWrapper--forest"
+                    >
+                      the snow adventurer
+                    </span>
+                  </h2>
+                  <ul class="tourCardFront__detail">
+                    <li class="tourCardFront__detail__item">3 day tours</li>
+                    <li class="tourCardFront__detail__item">Up to 30 people</li>
+                    <li class="tourCardFront__detail__item">2 tours guides</li>
+                    <li class="tourCardFront__detail__item">
+                      Sleep in cozy hotels
+                    </li>
+                    <li class="tourCardFront__detail__item">
+                      Difficulty: easy
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="flipCard__inner--back">
+                <div class="tourCardBack tourCardBack--forest">
+                  <h4 class="tourCardBack__subtitle">only</h4>
+                  <h1 class="tourCardBack__maintitle">$297</h1>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
