feat: button was added in back tourCard side

--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                 <div class="tourCardBack tourCardBack--summer">
                   <h4 class="tourCardBack__subtitle">only</h4>
                   <h1 class="tourCardBack__maintitle">$297</h1>
+                  <button class="btn btn--white">
+                    <a href="#">book now</a>
+                  </button>
                 </div>
               </div>
             </div>
@@ -187,11 +190,11 @@
               <div class="flipCard__inner--front">
                 <div class="tourCardFront">
                   <div
-                    class="tourCardFront__header tourCardFront__header--sea"
+                    class="tourCardFront__header tourCardFront__header--forest"
                   ></div>
                   <h2 class="tourCardFront__title">
                     <span
-                      class="tourCardFront__titleSpanWrapper tourCardFront__titleSpanWrapper--sea"
+                      class="tourCardFront__titleSpanWrapper tourCardFront__titleSpanWrapper--forest"
                     >
                       the forest hicker
                     </span>
@@ -210,9 +213,12 @@
                 </div>
               </div>
               <div class="flipCard__inner--back">
-                <div class="tourCardBack tourCardBack--sea">
+                <div class="tourCardBack tourCardBack--forest">
                   <h4 class="tourCardBack__subtitle">only</h4>
-                  <h1 class="tourCardBack__maintitle">$297</h1>
+                  <h1 class="tourCardBack__maintitle">$497</h1>
+                  <button class="btn btn--white">
+                    <a href="#">book now</a>
+                  </button>
                 </div>
               </div>
             </div>
@@ -224,13 +230,12 @@
               <div class="flipCard__inner--front">
                 <div class="tourCardFront">
                   <div
-                    class="tourCardFront__header tourCardFront__header--forest"
+                    class="tourCardFront__header tourCardFront__header--sea"
                   ></div>
                   <h2 class="tourCardFront__title">
                     <span
-                      class="tourCardFront__titleSpanWrapper tourCardFront__titleSpanWrapper--forest"
-                    >
-                      the snow adventurer
+                      class="tourCardFront__titleSpanWrapper tourCardFront__titleSpanWrapper--sea"
+                      >the snow adventurer
                     </span>
                   </h2>
                   <ul class="tourCardFront__detail">
@@ -247,9 +252,12 @@
                 </div>
               </div>
               <div class="flipCard__inner--back">
-                <div class="tourCardBack tourCardBack--forest">
+                <div class="tourCardBack tourCardBack--sea">
                   <h4 class="tourCardBack__subtitle">only</h4>
-                  <h1 class="tourCardBack__maintitle">$297</h1>
+                  <h1 class="tourCardBack__maintitle">$897</h1>
+                  <button class="btn btn--white">
+                    <a href="#">book now</a>
+                  </button>
                 </div>
               </div>
             </div>
