feat: tourSection done

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </div>
       <div class="row">
         <div class="col-1-of-3">
-          <div class="flipCard" style="height: 33.2rem;">
+          <div class="flipCard u-height-tour-card">
             <div class="flipCard__inner">
               <div class="flipCard__inner--front">
                 <div class="tourCardFront">
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="col-1-of-3">
-          <div class="flipCard" style="height: 33.2rem;">
+          <div class="flipCard u-height-tour-card">
             <div class="flipCard__inner">
               <div class="flipCard__inner--front">
                 <div class="tourCardFront">
@@ -225,7 +225,7 @@
           </div>
         </div>
         <div class="col-1-of-3">
-          <div class="flipCard" style="height: 33.2rem;">
+          <div class="flipCard u-height-tour-card">
             <div class="flipCard__inner">
               <div class="flipCard__inner--front">
                 <div class="tourCardFront">
@@ -263,6 +263,11 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="toursSection__bottom">
+        <button class="btn btn--green">
+          <a href="#">discover all tours</a>
+        </button>
       </div>
     </section>
 
