--- a/index.html
+++ b/index.html
@@ -271,6 +271,49 @@
       </div>
     </section>
 
+    <section class="storiesSection">
+      <div class="videoBackground">
+        <video autoplay muted loop>
+          <source src="./videos/video.mp4" />
+        </video>
+      </div>
+      <div class="storiesSection__header">
+        <div class="titleSection">
+          <h2 class="titleSection--natourTheme">
+            we make people genuinely happy
+          </h2>
+        </div>
+      </div>
+      <div class="storiesSection__content">
+        <div class="u-filter-drop-shadow">
+          <div class="story">
+            <div class="story__image">
+              <img
+                class="photoCircle"
+                src="https://picsum.photos/id/1011/200/200"
+              />
+            </div>
+            <div class="story__content">
+              <h3 class="titleContent u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur libero repellat quis
+                consequatur ducimus quam nisi exercitationem omnis earum qui.
+                Aperiam, ipsum sapiente aspernatur libero repellat quis
+                consequatur ducimus quam nisi exercitationem omnis earum qui.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="storiesSection__footer">
+        <a class="linkButton linkButton--green" href="#">
+          Read all stories →
+        </a>
+      </div>
+    </section>
     <script type="module" src="./js/script.js"></script>
   </body>
 </html>
