feat: circle image and spacing done

--- a/index.html
+++ b/index.html
@@ -272,11 +272,6 @@
     </section>
 
     <section class="storiesSection">
-      <div class="videoBackground">
-        <video autoplay muted loop>
-          <source src="./videos/video.mp4" />
-        </video>
-      </div>
       <div class="storiesSection__header">
         <div class="titleSection">
           <h2 class="titleSection--natourTheme">
@@ -287,15 +282,36 @@
       <div class="storiesSection__content">
         <div class="u-filter-drop-shadow">
           <div class="story">
-            <div class="story__image">
+            <figure class="story__image">
               <img
                 class="photoCircle"
                 src="https://picsum.photos/id/1011/200/200"
               />
-            </div>
+            </figure>
             <div class="story__content">
               <h3 class="titleContent u-margin-bottom-small">
                 I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam, ipsum sapiente aspernatur libero repellat quis
+                consequatur ducimus quam nisi exercitationem omnis earum qui.
+                Aperiam, ipsum sapiente aspernatur libero repellat quis
+                consequatur ducimus quam nisi exercitationem omnis earum qui.
+              </p>
+            </div>
+          </div>
+
+          <div class="story">
+            <figure class="story__image">
+              <img
+                class="photoCircle"
+                src="https://picsum.photos/id/1012/200/200"
+              />
+            </figure>
+            <div class="story__content">
+              <h3 class="titleContent u-margin-bottom-small">
+                WOW! My life is completely different now
               </h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
