--- a/index.html
+++ b/index.html
@@ -280,46 +280,58 @@
         </div>
       </div>
       <div class="storiesSection__content">
-        <div class="u-filter-drop-shadow">
-          <div class="story">
-            <figure class="story__image">
-              <img
-                class="photoCircle"
-                src="https://picsum.photos/id/1011/200/200"
-              />
-            </figure>
-            <div class="story__content">
-              <h3 class="titleContent u-margin-bottom-small">
-                I had the best week ever with my family
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Aperiam, ipsum sapiente aspernatur libero repellat quis
-                consequatur ducimus quam nisi exercitationem omnis earum qui.
-                Aperiam, ipsum sapiente aspernatur libero repellat quis
-                consequatur ducimus quam nisi exercitationem omnis earum qui.
-              </p>
+        <div class="row">
+          <div class="u-filter-drop-shadow">
+            <div class="story">
+              <figure class="story__image">
+                <img
+                  class="photoCircle"
+                  src="https://picsum.photos/id/1011/200/200"
+                />
+                <h3
+                  class="story__image__caption titleContent titleContent--white"
+                >
+                  mary smith
+                </h3>
+              </figure>
+              <div class="story__content">
+                <h3 class="titleContent u-margin-bottom-small">
+                  I had the best week ever with my family
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Aperiam, ipsum sapiente aspernatur libero repellat quis
+                  consequatur ducimus quam nisi exercitationem omnis earum qui.
+                  Aperiam, ipsum sapiente aspernatur libero repellat quis
+                  consequatur ducimus quam nisi exercitationem omnis earum qui.
+                </p>
+              </div>
             </div>
-          </div>
 
-          <div class="story">
-            <figure class="story__image">
-              <img
-                class="photoCircle"
-                src="https://picsum.photos/id/1012/200/200"
-              />
-            </figure>
-            <div class="story__content">
-              <h3 class="titleContent u-margin-bottom-small">
-                WOW! My life is completely different now
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Aperiam, ipsum sapiente aspernatur libero repellat quis
-                consequatur ducimus quam nisi exercitationem omnis earum qui.
-                Aperiam, ipsum sapiente aspernatur libero repellat quis
-                consequatur ducimus quam nisi exercitationem omnis earum qui.
-              </p>
+            <div class="story">
+              <figure class="story__image">
+                <img
+                  class="photoCircle"
+                  src="https://picsum.photos/id/1012/200/200"
+                />
+                <h3
+                  class="story__image__caption titleContent titleContent--white"
+                >
+                  jack wilson
+                </h3>
+              </figure>
+              <div class="story__content">
+                <h3 class="titleContent u-margin-bottom-small">
+                  WOW! My life is completely different now
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Aperiam, ipsum sapiente aspernatur libero repellat quis
+                  consequatur ducimus quam nisi exercitationem omnis earum qui.
+                  Aperiam, ipsum sapiente aspernatur libero repellat quis
+                  consequatur ducimus quam nisi exercitationem omnis earum qui.
+                </p>
+              </div>
             </div>
           </div>
         </div>
