--- a/index.html
+++ b/index.html
@@ -284,10 +284,7 @@
           <div class="u-filter-drop-shadow">
             <div class="story">
               <figure class="story__image">
-                <img
-                  class="photoCircle"
-                  src="https://picsum.photos/id/1011/200/200"
-                />
+                <img src="https://picsum.photos/id/1011/300/300" />
                 <h3
                   class="story__image__caption titleContent titleContent--white"
                 >
@@ -307,13 +304,9 @@
                 </p>
               </div>
             </div>
-
             <div class="story">
               <figure class="story__image">
-                <img
-                  class="photoCircle"
-                  src="https://picsum.photos/id/1012/200/200"
-                />
+                <img src="https://picsum.photos/id/1012/300/300" />
                 <h3
                   class="story__image__caption titleContent titleContent--white"
                 >
