--- a/index.html
+++ b/index.html
@@ -272,6 +272,11 @@
     </section>
 
     <section class="storiesSection">
+      <video autoplay muted loop playsinline class="videoBackground">
+        <source src="./videos/video.webm" type="video/webm" />
+        <source src="./videos/video.mp4" type="video/mp4" />
+      </video>
+
       <div class="storiesSection__header">
         <div class="titleSection">
           <h2 class="titleSection--natourTheme">
