chore: in progress

--- a/index.html
+++ b/index.html
@@ -340,6 +340,19 @@
         </a>
       </div>
     </section>
+
+    <section class="bookingSection">
+      <div class="bookingSection__content">
+        <div class="bookingSection__form u-form-polygon-background">
+          <div class="titleSection bookingSection__title">
+            <h1 class="titleSection--natourTheme">
+              start booking now
+            </h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script type="module" src="./js/script.js"></script>
   </body>
 </html>
